Addling files & folders to the repository

--- a/FunctionExpression/index.html
+++ b/FunctionExpression/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Function</title>
+    <title>Function Expression</title>
 </head>
 <body>
-    <script src="function.js"></script>
+    <script src="functionExpressionOne.js"></script>
+    <script src="functionExpressionTWo.js"></script>
 </body>
 </html>
