--- a/ArrowFunction/index.html
+++ b/ArrowFunction/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Function</title>
+    <title>Arrow Function</title>
 </head>
 <body>
-    <script src="function.js"></script>
+    <script src="arrowFunction.js"></script>
+    <script src="arrowFunctionTwo.js"></script>
 </body>
 </html>
