--- a/Constructor/index.html
+++ b/Constructor/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Function</title>
+    <title>Constructor</title>
 </head>
 <body>
-    <script src="function.js"></script>
+    <script src="constructor.js"></script>
 </body>
 </html>
