--- a/GetterSetter.js/index.html
+++ b/GetterSetter.js/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Function</title>
+    <title>Getter Setter</title>
 </head>
 <body>
-    <script src="function.js"></script>
+    <script src="getterSetter1.js"></script>
+    <script src="getterSetter2.js"></script>
 </body>
 </html>
