--- a/Static/index.html
+++ b/Static/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Function</title>
+    <title>Static</title>
 </head>
 <body>
-    <script src="function.js"></script>
+    <script src="static1.js"></script>
+    <script src="static2.js"></script>
 </body>
 </html>
